--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "build": "eleventy",
+    "serve": "eleventy --serve"
+  },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1"
   }
